<resources>
    <!-- Login Screen-->
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="moveregister">New Member? Register!</string>

    <!-- Register Screen-->
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="number">Mobile Number</string>


    <string name="app_name">wine_store_app</string>

    <string name="signin">SignIn</string>

    <!-- Use dimen for dp values -->
    <dimen name="headings">40sp</dimen>
    <string name="title_activity_get_started_screen">getStartedScreen</string>
    <string name="getStarted">Get Started !</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_tabview">tabview</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_bottomnaviagetion">bottomnaviagetion</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
